# selfolgy.me

./: .gitignore  AGENT_STRATEGY_PLAN.md  ARCHITECTURE_CONTRACTS.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_REFACTORING_PLAN.md  ARCHIVE_LIST.md  AUTOMERGE_STATUS.md  AUTO_RETRY_FIX.md  CLAUDE.md  CLEANUP_LOG.md  COUNTER_SYSTEM_FILES.md  DEBUGGING_STRATEGY.md  DETAILED_FIX_PLAN_2025-10-01.md  DEVOPS_GUIDE.md  DEVOPS_QUICK_START.md  DEVOPS_STRATEGY.md  DIAGNOSTIC_REPORT_2025-10-01.md  Dockerfile  Dockerfile.dev  Dockerfile.new  Dockerfile.test  EXECUTIVE_SUMMARY_RU.md  FINAL_REPORT_02_10_2025.md  FIX_REPORT_personality_summary.md  MIGRATION_GUIDE.md  MONITORING.md  MONITORING_SUMMARY.md  MONITORING_SYSTEM.md  MONITORING_TRANSPARENCY.md  MVP_PLAN.md  Makefile  NEXT_STEPS_QUESTIONS.md  ONBOARDING_DEVELOPMENT_PLAN.md  PHASE_2_ANALYSIS_SYSTEM_PLAN.md  PRIVACY_AUDIT.md  PRODUCT_MANAGER_GUIDE.md  PROJECT_STRUCTURE_FULL.md  QUESTIONS_FOR_IMPROVEMENT.md  QUESTIONS_MERGE_COMPLETE.md  QUICK_MERGE_INSTRUCTIONS.md  (+50 more)
.claude/: BACKLOG.md  README.md  settings.json  settings.local.json
alembic/: env.py
archive/: deprecated_onboarding_dao.py_20250909_093926  deprecated_templates_onboarding.json_20250909_093920
coach/: COMPLETION_SUMMARY.md  DATABASE_SCHEMA_FIX.md  EXECUTIVE_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PHASE_2_3.md  IMPORT_FIX_COMPLETE.md  INTEGRATION_COMPLETE.md  PHASE2_3_ACTIVATED.md  PHASE2_3_STATUS.md  PRODUCT_ROADMAP.md  README.md  ai_coach_prompt.md  architecture_recommendations.md
core/: Dockerfile.event-monitor  __init__.py  circuit_breaker.py  (+15 more)
(+528 files in other folders)
